--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,18 +1,110 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.venomeye.icmsbulgaria.MainMenuActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
 
-    <TextView
+    android:gravity="center_vertical"
+    android:background="@color/backgroundColor">
+
+    <RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="140dp"
+
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+    <Button
+        android:id="@+id/news"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/pentacolored"
+        android:text="News" />
+
+    <Button
+        android:id="@+id/program"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+
+        android:background="@drawable/pentacolored"
+        android:text="Program" />
+
+    <Button
+        android:id="@+id/sessions"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+
+        android:background="@drawable/pentawhite"
+        android:text="Sessions" />
+</RelativeLayout>
+    <RelativeLayout
+
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content" >
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/speakers"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentLeft="true"
+            android:background="@drawable/pentawhite"
+            android:text="Speakers" />
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/icmsbg"
+
+            android:layout_centerInParent="true"/>
+
+        <Button
+            android:id="@+id/workshops"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentRight="true"
+
+            android:background="@drawable/pentacolored"
+            android:text="Workshops" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_marginTop="20dp"
+
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_height="140dp" >
+
+        <Button
+            android:id="@+id/venues"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+            android:background="@drawable/pentacolored"
+            android:layout_alignParentLeft="true"
+            android:text="Venues" />
+
+        <Button
+            android:id="@+id/contact"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+            android:background="@drawable/pentawhite"
+            android:layout_centerInParent="true"
+            android:text="Contact us" />
+
+        <Button
+            android:id="@+id/networking"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+            android:background="@drawable/pentacolored"
+            android:layout_alignParentRight="true"
+            android:text="Networking" />
+    </RelativeLayout>
+
+</LinearLayout>
