--- a/app/src/main/res/layout/list_view_news_row.xml
+++ b/app/src/main/res/layout/list_view_news_row.xml
@@ -37,7 +37,6 @@
                 android:layout_height="35dp"
                 android:id="@+id/title"
                 android:paddingLeft="20dp"
-                android:textColor="@android:color/black"
                 android:textSize="30sp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -48,9 +47,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:gravity="right"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
                 android:paddingLeft="20dp"
-                android:paddingBottom="5dp"
-                android:textColor="@android:color/black"
                 android:textSize="15sp" />
 
         </RelativeLayout>
