+ all workshops added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="backgroundColor">#93dffe</color>
 
     <color name="aliceBlue">#f0f8ff </color>
+    <color name="whiteBlue">#cdf0ff </color>
 </resources>
