--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -44,6 +44,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_width="wrap_content"
-        android:layout_height="30dp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
