--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -8,10 +8,9 @@
 
     <RelativeLayout
     android:layout_width="wrap_content"
-    android:layout_height="140dp"
-
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
     <Button
         android:id="@+id/news"
@@ -25,10 +24,11 @@
         android:id="@+id/program"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"
 
         android:background="@drawable/pentacolored"
-        android:text="Program" />
+        android:text="Program"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/sessions"
@@ -40,9 +40,10 @@
         android:text="Sessions" />
 </RelativeLayout>
     <RelativeLayout
-
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
@@ -66,18 +67,21 @@
             android:id="@+id/workshops"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_alignParentRight="true"
 
             android:background="@drawable/pentacolored"
-            android:text="Workshops" />
+            android:text="Workshops"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="9dp"
+            android:layout_marginEnd="9dp" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
 
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_height="140dp" >
+        android:layout_height="wrap_content" >
 
         <Button
             android:id="@+id/venues"
@@ -94,8 +98,9 @@
             android:layout_height="100dp"
 
             android:background="@drawable/pentawhite"
-            android:layout_centerInParent="true"
-            android:text="Contact us" />
+            android:text="Contact us"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <Button
             android:id="@+id/networking"
