--- a/app/src/main/res/layout/activity_workshops.xml
+++ b/app/src/main/res/layout/activity_workshops.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor">
+    android:background="@drawable/backgroundsecondary">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,7 +11,7 @@
             android:id="@+id/all_workshops_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"/>
+            android:background="@android:color/transparent"/>
     </LinearLayout>
 
     <ProgressBar
