--- a/app/src/main/res/layout/list_view_network.xml
+++ b/app/src/main/res/layout/list_view_network.xml
@@ -5,7 +5,9 @@
     <TextView
         android:id="@+id/title"
         android:textSize="18sp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="10dp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
@@ -13,26 +15,32 @@
 
     <TextView
         android:id="@+id/content"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"/>
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/location"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="20dp"
+        android:textStyle="italic"
+        android:textSize="14sp"
+        android:layout_marginRight="20dp"
+        android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/date"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="end"
+        android:textSize="14sp" />
 
 </LinearLayout>
