--- a/app/src/main/res/layout/list_view_speaker.xml
+++ b/app/src/main/res/layout/list_view_speaker.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/whiteBlue"
+    android:background="@color/transparent"
     >
 
     <com.venomeye.icmsbulgaria.Utilities.RoundedParseImageView
