--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#86def7</color>
+    <color name="colorPrimaryDark">#41c7ed</color>
+    <color name="colorAccent">#0a3392</color>
     <color name="backgroundColor">#93dffe</color>
 
     <color name="aliceBlue">#f0f8ff </color>
+    <color name="black">#000000 </color>
+    <color name="DarkishCyan">#86def7 </color>
     <color name="whiteBlue">#cdf0ff </color>
+    <color name="transparent">#00000000 </color>.
 </resources>
