--- a/app/src/main/res/layout/list_view_news_row.xml
+++ b/app/src/main/res/layout/list_view_news_row.xml
@@ -2,58 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:padding="5dp">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cv"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="2dp"
-        app:cardPreventCornerOverlap="false"
-        card_view:cardBackgroundColor="@android:color/white"
-        card_view:cardElevation="2dp"
-        card_view:cardUseCompatPadding="true"
-        >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/aliceBlue"
+            android:background="@color/transparent"
             >
 
             <com.parse.ParseImageView
                 android:id="@+id/photo"
-                android:layout_width="match_parent"
+                android:layout_width="140dp"
                 android:layout_height="130dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true" />
 
             <TextView
-                android:layout_below="@id/photo"
+                android:layout_toRightOf="@id/photo"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="70dp"
                 android:id="@+id/title"
-                android:paddingLeft="20dp"
-                android:textSize="30sp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textSize="21sp" />
 
             <TextView
                 android:id="@+id/date"
-                android:layout_below="@id/title"
+                android:layout_toRightOf="@id/photo"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:gravity="right"
-                android:layout_marginRight="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="100dp"
+                android:textAlignment="textEnd"
+                android:layout_gravity="end"
                 android:layout_marginBottom="5dp"
-                android:paddingLeft="20dp"
-                android:textSize="15sp" />
+                android:textSize="13sp" />
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
