--- a/app/src/main/res/layout/activity_workshop_single.xml
+++ b/app/src/main/res/layout/activity_workshop_single.xml
@@ -38,6 +38,8 @@
 
         android:id="@+id/content"
         android:layout_marginTop="10dp"
+
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_width="wrap_content"
@@ -53,8 +55,12 @@
         android:text="DATE"/>
     <TextView
         android:id="@+id/date"
+        android:drawablePadding="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/clock"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_alignParentRight="true"
@@ -70,6 +76,10 @@
         android:text="LOCATION"/>
     <TextView
         android:id="@+id/location"
+        android:drawableLeft="@drawable/locmarker"
+       android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:drawablePadding="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
