--- a/app/src/main/res/layout/list_view_event.xml
+++ b/app/src/main/res/layout/list_view_event.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/time"
+        android:drawableLeft="@drawable/clock"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
+
+        android:drawablePadding="5dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
 
@@ -16,6 +19,7 @@
         android:textSize="18sp"
         android:layout_marginLeft="7dp"
         android:layout_marginRight="7dp"
+
         android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,6 +29,7 @@
 
     <TextView
         android:id="@+id/location"
+        android:drawableLeft="@drawable/locmarker"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
