--- a/app/src/main/res/layout/list_view_network.xml
+++ b/app/src/main/res/layout/list_view_network.xml
@@ -8,10 +8,23 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/date"
+
+        android:drawableLeft="@drawable/clock"
+        android:drawablePadding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="22dp"
+
+        android:layout_marginBottom="10dp"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/content"
@@ -24,23 +37,14 @@
 
     <TextView
         android:id="@+id/location"
+        android:drawableLeft="@drawable/locmarker"
         android:layout_marginLeft="20dp"
         android:textStyle="italic"
         android:textSize="14sp"
         android:layout_marginRight="20dp"
-        android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
 
-        android:layout_marginBottom="5dp"
-        android:layout_gravity="end"
-        android:textSize="14sp" />
 
 </LinearLayout>
